package es.etg.tierno.daw.examen.vera.model.dao;

public class SQLIteBD extends BaseDatosConnection{
    
    @Override
    public int insertarTrabajador(String nombre, String dni, double sueldo, String puesto) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'insertarTrabajador'");
    }

    @Override
    public void seleccionar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'seleccionar'");
    }
    
}
