package es.etg.tierno.daw.examen.vera.model.entities;

public interface Gestionable {
    public void add(Trabajador trabajador);
    public void del(Trabajador trabajador);
    //public Informe generarInforme();
}
